Fixed IE Spacing

--- a/scss/_dashboard.scss
+++ b/scss/_dashboard.scss
@@ -54,6 +54,7 @@ a.news-item {
     font-family: "Entypo";
     font-size: 26px;
     display: block;
+    text-align: center;
     margin-top: -35px;
   }
   &.tools a:before {
