--- a/scss/_forms.scss
+++ b/scss/_forms.scss
@@ -128,16 +128,6 @@ table.list {
   }
 }
 
-.codeview {
-  margin: 20px 0;
-  padding: 5px;
-  border: 4px solid #ffcc00;
-  background: #fffaea;
-  font-family: Consolas, "Lucida Console", "Courier New", monospace;
-  font-size: 0.9em;
-  width: 95%;
-}
-
 /* Lists */
 
 table.list {
