--- a/scss/_systemmonitor.scss
+++ b/scss/_systemmonitor.scss
@@ -131,3 +131,14 @@ div.status {
 .state-critical .status, .state-critical-ve .status {
   background-position: 0 -463px;
 }
+
+.codeview {
+  margin: 20px 0;
+  padding: 5px;
+  border: 4px solid #ffcc00;
+  background: #fffaea;
+  font-family: Consolas, "Lucida Console", "Courier New", monospace;
+  font-size: 0.9em;
+  width: 95%;
+  @include border-radius ( 10px );
+}
